--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -1,8 +1,11 @@
 .footer {
-    height: 250px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #edf3f6;
+  }
+  .footer h3{
+    color: black;
   }
