--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,8 @@ textarea::placeholder {
   border: none;
   padding: 10px 15px;
   font-size: 1em;
+  display: flex;
+  justify-content: center; /* Centraliza horizontalmente o botão */
 }
 
 .btn.btn-dark {
